--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <section>
         <article class="sky">
             <img src="./img/sun.png" alt="태양" class="sun">
-            <img src="./img/moon.png" alt="태양" class="moon">
+            <img src="./img/moon.png" alt="달" class="moon">
             <img src="./img/cloud.png" alt="큰 구름" class="cloud_1">
             <img src="./img/cloud.png" alt="작은 구름" class="cloud_2">
         </article>
 
-        <article class="town">
-            <img src="./img/town.png" alt="" class="town_img">
+        <article class="city">
+            <img src="./img/city.png" alt="" class="city_img">
         </article>
     </section>
 </body>
